add averagepixel_client.py in Makefile

--- a/api/Makefile
+++ b/api/Makefile
@@ -3,7 +3,7 @@ SOURCE=../protos/imagestatistics.proto
 COMPILER=python -m grpc_tools.protoc
 
 
-all: imagestatistics_pb2.py imagestatistics_pb2_grpc.py averagepixel_client.py
+all: imagestatistics_pb2.py imagestatistics_pb2_grpc.py imagestatistics_client.py
 
 imagestatistics_pb2_grpc.py:
 	${COMPILER} -I${INCLUDES}  ${SOURCE} --grpc_python_out=.
@@ -11,10 +11,10 @@ imagestatistics_pb2_grpc.py:
 imagestatistics_pb2.py:
 	${COMPILER} -I${INCLUDES}  ${SOURCE} --python_out=.
 
-averagepixel_client.py:
-	cp ../averagepixel/client.py averagepixel_client.py
+imagestatistics_client.py:
+	cp ../averagepixel/client.py imagestatistics_client.py
 
 clean:
 	-rm imagestatistics_pb2.py
 	-rm imagestatistics_pb2_grpc.py
-	-rm averagepixel_client.py
+	-rm imagestatistics_client.py
