--- a/averagepixel/Dockerfile
+++ b/averagepixel/Dockerfile
@@ -1,7 +1,7 @@
 FROM python:3.7-slim
 
 ADD . /code/
-ENV PYTHONPATH $PYTHONPATH:/code
+ENV PYTHONPATH /code
 
 WORKDIR /code
 RUN apt-get update && apt-get install make && pip install -r requirements.txt && make
