Add API service

--- a/api/Makefile
+++ b/api/Makefile
@@ -3,7 +3,7 @@ SOURCE=../protos/imagestatistics.proto
 COMPILER=python -m grpc_tools.protoc
 
 
-all: imagestatistics_pb2.py imagestatistics_pb2_grpc.py imagestatistics_client.py
+all: imagestatistics_pb2.py imagestatistics_pb2_grpc.py imagestatistics_client.py VERSION
 
 imagestatistics_pb2_grpc.py:
 	${COMPILER} -I${INCLUDES}  ${SOURCE} --grpc_python_out=.
@@ -14,7 +14,11 @@ imagestatistics_pb2.py:
 imagestatistics_client.py:
 	cp ../averagepixel/client.py imagestatistics_client.py
 
+VERSION:
+	git describe > VERSION
+
 clean:
 	-rm imagestatistics_pb2.py
 	-rm imagestatistics_pb2_grpc.py
 	-rm imagestatistics_client.py
+	-rm VERSION
